chore: exclude archived code from lint/CI checks
Reduce noise-to-signal ratio by excluding archived/ and
supervisor-archived/ directories from ShellCheck (CI + local),
SonarCloud analysis, and local pattern checks.

46 archived scripts (54K lines, 12.6% of all scripts) are versioned
for reference but not actively maintained — linting them inflates
issue counts and obscures real issues in active code.

Changes:
- CI (code-quality.yml): filter archived paths from ShellCheck step
- Local (linters-local.sh): add -not -path exclusions to collect_shell_files()
- SonarCloud (sonar-project.properties): add archived dirs to sonar.exclusions

Closes #2413

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -112,6 +112,8 @@ jobs:
         echo "Validating shell scripts with ShellCheck..."
         errors=0
 
+        # Exclude archived code from lint — these are versioned for reference
+        # but not actively maintained. Reduces noise-to-signal ratio in CI.
         while IFS= read -r file; do
           if shellcheck -S error "$file" > /dev/null 2>&1; then
             echo "OK $file"
@@ -120,7 +122,7 @@ jobs:
             shellcheck -S error -f gcc "$file" 2>&1
             errors=$((errors + 1))
           fi
-        done < <(git ls-files '*.sh')
+        done < <(git ls-files '*.sh' | grep -v 'archived/')
 
         if [ "$errors" -gt 0 ]; then
           echo ""
