--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,8 @@ sonar.sources=.agents,configs,templates
 sonar.sourceEncoding=UTF-8
 
 # Exclusions - files and directories to exclude from analysis
-sonar.exclusions=**/*.txt,**/tmp/**,**/logs/**,.git/**,**/*.json
+# Archived code is versioned for reference but not actively maintained
+sonar.exclusions=**/*.txt,**/tmp/**,**/logs/**,.git/**,**/*.json,**/archived/**,**/supervisor-archived/**
 
 # Coverage exclusions (shell scripts, docs, and example files don't have traditional coverage)
 sonar.coverage.exclusions=**/*.sh,**/*.md,**/*.json,**/*.yml,**/*.yaml,configs/**/*.py,**/example*.py,**/*-example.py
