fix: restore non-SC1091 shellcheck disables and suppress CodeFactor false positives (t1344)
The initial SC1091 cleanup incorrectly removed compound disable directives
(e.g., SC1091,SC2016,SC2034) entirely instead of keeping the non-SC1091 codes.
This caused CodeFactor to report 642 new issues.

Changes:
- Restore 27 inline shellcheck disable directives (SC2016, SC2086, SC2154)
  that were collateral damage from the SC1091 removal
- Add disable=SC2329,SC2317 to .shellcheckrc (project-wide false positives
  from library/sourced-file architecture)
- Exclude archived/ and tests/ dirs from CodeFactor analysis

--- a/.codefactor.yml
+++ b/.codefactor.yml
@@ -3,6 +3,9 @@
 
 exclude_paths:
   - ".agents/scripts/_archive/**"
+  - ".agents/scripts/archived/**"
+  - ".agents/scripts/supervisor-archived/**"
+  - "tests/**"
   - "backups/**"
   - "node_modules/**"
   - "dist/**"
